--- a/members/static/styleindex.css
+++ b/members/static/styleindex.css
@@ -215,6 +215,7 @@ background-attachment: fixed;
   top: calc(100% + 10px);
   left: 50%;
   transform: translateX(-50%);
+  margin-right: 10px;
 }
 
 .dropdown-content a {
