--- a/members/templates/projects/funding_now.html
+++ b/members/templates/projects/funding_now.html
@@ -156,7 +156,7 @@
       <a href="{% url 'user_channel' username=project.user.username %}" style="text-decoration: none;">
         <div class="cuntainer">
           <!-- Display project information here -->
-          <img src="{{ project.project_thumbnail.url }}" style="height: 40%; width: auto;">
+          <img src="{{ project.project_thumbnail.url }}" style="height: 251px; width: auto;">
           <h2 class="title">{{ project.project_title }}</h2>
           <div class="container">
             <p class="description">{{ project.project_description }}</p>
