--- a/members/static/fundingnowstyle.css
+++ b/members/static/fundingnowstyle.css
@@ -139,6 +139,7 @@ li:hover{
       top: calc(100% + 10px);
       left: 50%;
       transform: translateX(-50%);
+      margin-right: 10px;
     }
     
 .dropdown-content a {
@@ -231,7 +232,7 @@ body{
       display: flex;
       flex-wrap: wrap;
       justify-content: space-evenly;
-      margin: -2vw;
+      margin:  auto;
     }
   
     
@@ -448,7 +449,8 @@ body{
       .logo{
          width: 120px;
          height: 120px;
-        
+        top: 0px;
+        margin-top: 7px;
        }
      
       body{
@@ -488,7 +490,7 @@ body{
        .logo{
         width: 110px;
         height: 110px;
-        top: 10px;
+        
            }
         
       .dropdown img{
