--- a/members/static/loginstyle.css
+++ b/members/static/loginstyle.css
@@ -12,6 +12,8 @@
   font-weight: 700;
   margin: 0;
   font-size: 0.9rem;
+  margin-top: 0.2em;
+  margin-bottom: 0.2em;
 }
 
 .rip{
@@ -24,6 +26,7 @@ background-size: cover;
  font-family: 'Raleway',sans-serif;
  font-size: 2rem; font-weight: 600;
 }
+
 .selx{
   font-family: 'Raleway', sans-serif;
   font-size: 1.1rem;
@@ -38,9 +41,8 @@ background-size: cover;
   justify-content: center;
   width: 40vw;
   height: 100vh;
-  
-
 }
+
 .ily{
   width: 100%;
   height: 50px;
@@ -52,10 +54,12 @@ background-size: cover;
   text-align: center;
   margin-top: 20px;
 }
+
 .ily:hover{
   background-color: #42c09e;
   transition: 0.2s ease-in;
 }
+
 .rip-phone{
   display: flex; 
   flex-direction: column;
@@ -74,7 +78,28 @@ background-size: cover;
 .form-container {
     max-height: 260px; /* Adjust the height as needed */
     overflow-y: auto;
+    padding-right: 10px;
   }
+
+
+  /* Style the scrollbar track */
+.form-container::-webkit-scrollbar {
+  width: 10px; /* Width of the scrollbar track */
+  background-color: #f1f1f1; /* Background color of the track */
+  border-radius: 5px;
+}
+
+/* Style the scrollbar thumb */
+.form-container::-webkit-scrollbar-thumb {
+  background-color: #ccc; /* Color of the thumb */
+  border-radius: 5px; /* Rounded corners for the thumb */
+}
+
+/* Optionally, you can add a hover effect to the thumb */
+.form-container::-webkit-scrollbar-thumb:hover {
+  background-color: #307261; /* Color of the thumb on hover */
+}
+ 
 
 @media(min-width:951px){
   .rip-phone{
