--- a/members/static/stylingandallahh.css
+++ b/members/static/stylingandallahh.css
@@ -227,6 +227,7 @@ body{
   top: calc(100% + 10px);
   left: 50%;
   transform: translateX(-50%);
+  margin-right: 10px;
 }
 
 .dropdown-content a {
