--- a/members/static/testingstyles.css
+++ b/members/static/testingstyles.css
@@ -163,6 +163,7 @@
       top: calc(100% + 10px);
       left: 50%;
       transform: translateX(-50%);
+      margin-right: 10px;
     }
     
 .dropdown-content a {
@@ -895,6 +896,7 @@ width: 100%;
 height: 100%;
 background-color: rgba(0, 0, 0, 0.7);
 z-index: 1;
+overflow: hidden;
 }
 
 /* Lightbox container */
@@ -932,14 +934,39 @@ text-align: left;
 display: block;
 }
 
-/* Style the copy link as an icon */
-.copy-link {
+.form-input-container {
+  display: flex;
+  align-items: center;
+  width: 50%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 15px 8px;
 
-color: #000; /* Change the color to your desired icon color */
-text-decoration: none;
-cursor: pointer;
-/* Add any additional styling you want for the icon */
 }
+
+#link-input {
+  flex: 1;
+  border: none;
+  background-color: transparent;
+  padding: 0 8px;
+ 
+}
+
+
+#copy-button {
+  background-color: #007BFF;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 15px 8px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+#copy-button:hover {
+  background-color: #0056b3;
+}
+
 
 header{
   margin-bottom: 120px;
