--- a/members/templates/projects/update_detail.html
+++ b/members/templates/projects/update_detail.html
@@ -89,7 +89,7 @@
 
      </ul>
 
-     <div class="overlay" id="overlay">
+     <div class="overlayy" id="overlay">
       <div class="close-btn">
         <i class="fas fa-times fa-lg"></i>
       </div>
