--- a/ourtubehome/templates/how-it-works.html
+++ b/ourtubehome/templates/how-it-works.html
@@ -124,7 +124,7 @@
     
 <div style="display: flex; flex-direction: column; max-width: 50%; gap: 20px; margin-left: 5%;">
 
-<p class="pstyle">In today's fast-paced world, philanthropy often lacks a personal touch and a sense of accountability, resulting in charity fraud of $2.2 billion each year, leaving many generous hearts disillusioned.</p>
+<p class="pstyle">In today's fast-paced world, the landscape of philanthropy has become increasingly impersonal, lacking the heartfelt connections and accountability that donors seek. Sadly, this void has given rise to charity fraud, which siphons an alarming $2.2 billion each year from the pockets of well-intentioned individuals, leaving them disheartened and skeptical.</p>
 <p class="pstyle">Our-Tube is not just another fundraising platform; it's a place where you can fund projects of people you truly know and admire. Whether it's your favorite content creators, inspiring individuals, or passionate groups, Our-Tube aims to connect you to a plethora of projects that are making a difference in unique and creative ways. </p>
 
 <p class="pstyle">Step into a world where you can witness the smiles YOUR support brings to life. Our-Tube offers content creators a dedicated space to engage with their loyal followers. Creators can not only receive donations, but can also share updates and document progress on their own channel. We encourage you to leverage our platform to showcase the beauty and positivity you can create in the world through multiple projects on your channel. Join us on Our-Tube, and let's rewrite the narrative of giving together, one smile at a time.</p>
