--- a/members/static/testingstyles.css
+++ b/members/static/testingstyles.css
@@ -1,3 +1,36 @@
+.popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.9);
+  z-index: 9999;
+}
+
+.popup-content {
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+  padding-top: 50px;
+}
+
+.close-button-phone {
+  position: absolute;
+  top: 5%;
+  right: 5%;
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.close-button-phone:focus {
+  outline: none;
+}
+
+
 
 
 
@@ -832,7 +865,7 @@ background-color: #ebebeb;
 }
 
 .comment-body {
-
+  margin: 0;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   color: #333;
@@ -941,7 +974,7 @@ display: block;
   border: 1px solid #ccc;
   border-radius: 4px;
   padding: 15px 8px;
-
+  
 }
 
 #link-input {
@@ -949,9 +982,17 @@ display: block;
   border: none;
   background-color: transparent;
   padding: 0 8px;
- 
+  
+  
 }
-
+@media(max-width:360px){
+ #link-input{
+  text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: horizontal; 
+    font-size: 0.75rem;
+ }
+}
 
 #copy-button {
   background-color: #007BFF;
