--- a/members/static/testingstyles.css
+++ b/members/static/testingstyles.css
@@ -1008,6 +1008,38 @@ display: block;
   background-color: #0056b3;
 }
 
+.form-input-container-com {
+  display: flex;
+  align-items: center;
+  width: 50%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 15px 8px;
+  
+}
+
+#link-input-com {
+  flex: 1;
+  border: none;
+  background-color: transparent;
+  padding: 0 8px;
+  
+  
+}
+#copy-button-com {
+  background-color: #007BFF;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 15px 8px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+#copy-button-com:hover {
+  background-color: #0056b3;
+}
+
 
 header{
   margin-bottom: 120px;
@@ -1181,7 +1213,7 @@ header{
   
 
   .xvid{
-    width: 60vw; height: calc(60vw * 9 / 16);
+    width: 100%; height: calc(100% * 9 / 16);
   }
   .xvidpfp{
     width: 55px;
