--- a/members/templates/projects/update_detail.html
+++ b/members/templates/projects/update_detail.html
@@ -119,7 +119,7 @@
     <h2 align="center" class="ash">Update #{{update_number}} in <a href="{% url 'user_channel' username=project.user %}" style="color: #000000;"> {{project.project_title}}</a></h2>
 
     
-<div style="display: flex; flex-direction: row; justify-content: space-around;">
+<div style="display: flex; flex-direction: row; width: 90vw; margin: auto; gap: 5%; align-items: flex-start;">
   <div class="dek">
       <video controls class="xvid">
           <source src="{{ update.update_video.url }}" type="{{ update.update_video.content_type }}">
@@ -138,7 +138,7 @@
                 {% endif %}
                 <div style="display: flex; flex-direction: column;">
                   <p class="xvidusername"><a href="{% url 'user_channel' username=project.user %}" style="color: #000000; text-decoration: none; font-weight: 600;">@{{ project.user.username }}</a></p>
-               
+                  <p style="margin: 0; color: gray;">{{number_of_subscribers}} subscribers</p>
                 </div>     
             </div>
                       {% if is_subscribed %}
