Lana changes to website like favicon and title

--- a/members/templates/projects/project_update.html
+++ b/members/templates/projects/project_update.html
@@ -12,9 +12,12 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato&Raleway:wght@400;600&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Follower updates -Our-Tube</title>
     {% load static %}
-   
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'apple-touch-icon.png' %}">
+<link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon-32x32.png' %}">
+<link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon-16x16.png' %}">
+<link rel="manifest" href="{% static 'site.webmanifest'%}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 <link rel="stylesheet" href="{% static 'testingstyles.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
