--- a/members/templates/Channel/channel_customization.html
+++ b/members/templates/Channel/channel_customization.html
@@ -4,8 +4,12 @@
   <script src="https://kit.fontawesome.com/4db88b2900.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Channel customization -Our-Tube</title>
     {% load static %}
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'site.webmanifest'%}">
     <link rel="stylesheet" href="{%static 'userchannelstyle.css'%}">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cropperjs@1.5.12/dist/cropper.min.css">
