--- a/members/templates/Channel/complete_project.html
+++ b/members/templates/Channel/complete_project.html
@@ -4,9 +4,13 @@
   <script src="https://kit.fontawesome.com/4db88b2900.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{{user.username}}'s completed projects</title>
     {% load widget_tweaks %}
     {% load static %}
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'site.webmanifest'%}">
     <link rel="stylesheet" href="{% static 'fundingnowstyle.css' %}">
     <link rel="stylesheet" href="{% static 'testingstyles.css' %}">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
