--- a/members/templates/donation/donation_landing_page.html
+++ b/members/templates/donation/donation_landing_page.html
@@ -52,9 +52,12 @@ input.donation-box::-webkit-outer-spin-button {
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our-tube</title>
+    <title>Donate to {{project.user}} to help in {{project.project_title}}</title>
     <link rel="stylesheet" href="{% static 'donationstyle.css' %}">
-   
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'apple-touch-icon.png' %}">
+<link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon-32x32.png' %}">
+<link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon-16x16.png' %}">
+<link rel="manifest" href="{% static 'site.webmanifest'%}">
     <script>
       window.addEventListener('scroll', function() {
         var navbar = document.querySelector('.navbar-testing');
