--- a/members/templates/projects/funding_now.html
+++ b/members/templates/projects/funding_now.html
@@ -4,9 +4,13 @@
   <script src="https://kit.fontawesome.com/4db88b2900.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Funding now -Our-Tube</title>
     {% load widget_tweaks %}
     {% load static %}
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'apple-touch-icon.png' %}">
+<link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon-32x32.png' %}">
+<link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon-16x16.png' %}">
+<link rel="manifest" href="{% static 'site.webmanifest'%}">
     <link rel="stylesheet" href="{%static 'fundingnowstyle.css'%}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-mCE1kFjAF8wwDZTG0apORHo2O5RAIDFZkHj7XQPhyY12hNl0ttxQ1uqg29UC9H/b" crossorigin="anonymous" />
 
