--- a/ourtubehome/templates/how-it-works.html
+++ b/ourtubehome/templates/how-it-works.html
@@ -3,6 +3,10 @@
     <head>
         <script src="https://kit.fontawesome.com/4db88b2900.js" crossorigin="anonymous"></script>
        {% load static %}
+       <link rel="apple-touch-icon" sizes="180x180" href="{% static 'apple-touch-icon.png' %}">
+       <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon-32x32.png' %}">
+       <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon-16x16.png' %}">
+       <link rel="manifest" href="{% static 'site.webmanifest'%}">
           <meta charset="UTF-8">
           <meta http-equiv="X-UA-Compatible" content="IE=edge">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +15,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@400;600&family=Raleway:wght@400;600&display=swap" rel="stylesheet">
-          <title>Our-tube</title>
+          <title>How Our-tube works</title>
           <link rel="stylesheet" href="{% static 'stylingandallahh.css' %}">
          
           <script>
