--- a/ourtubehome/templates/index.html
+++ b/ourtubehome/templates/index.html
@@ -4,6 +4,9 @@
 <head>
   <script src="https://kit.fontawesome.com/4db88b2900.js" crossorigin="anonymous"></script>
  {% load static %}
+ <link rel="apple-touch-icon" sizes="180x180" href="{% static 'apple-touch-icon.png' %}">
+ <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon-32x32.png' %}">
+ <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon-16x16.png' %}">
     <meta charset="UTF-8">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato&family=Raleway:wght@400;600&display=swap" rel="stylesheet">
-    <title>Our-tube</title>
+    <title>Our-Tube</title>
     <link rel="stylesheet" href="{% static 'styleindex.css' %}">
    
     <script>
