--- a/members/static/userchannelstyle.css
+++ b/members/static/userchannelstyle.css
@@ -370,7 +370,7 @@ textarea :focus {
     width: 150px;
     height: 150px;
     position: absolute;
-    top: 1.5vh;
+    top: 14px;
     left: 50%;
     transform: translateX(-50%);
    
